# pei-nwdaf-network-producer

./: .gitignore  Dockerfile  Dockerfile.tshark  README.md  docker-compose.yml  fields.yml.example  main.py  main_csv.py  main_tshark.py  pyproject.toml  requirements.txt  simulate_traffic.py
.github/workflows/: tests.yml
src/: csv_reader.py  main.py  router.py  sender.py  subscription_registry.py
tests/: api_app.py  test.csv  test_csv_reader.py  test_sender.py  test_subscription_registry.py
